--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : Sans limites!
+  - title                                 : Sans limites!!
     description                           : le jeu génère des tuiles de mots croisés infinies
     fontawesome_icon_name                 : rocket
 
